throw PErsistence exception in DAOs