@@ -10,8 +10,6 @@ import org.junit.Test;
 
 import com.logicaldoc.core.AbstractCoreTestCase;
 import com.logicaldoc.core.PersistenceException;
-import com.logicaldoc.core.document.Rating;
-import com.logicaldoc.core.document.RatingDAO;
 
 import junit.framework.Assert;
 
@@ -59,16 +57,16 @@ public class HibernateRatingDAOTest extends AbstractCoreTestCase {
 	}
 
 	@Test
-	public void testFindVotesByDocId() {
+	public void testFindVotesByDocId() throws PersistenceException {
 		Rating rat1 = dao.findVotesByDocId(1);
 		Assert.assertNotNull(rat1);
 		Assert.assertEquals(2, rat1.getCount().intValue());
-		Assert.assertEquals(new Float(2.5), rat1.getAverage().floatValue());
+		Assert.assertEquals(Float.valueOf(2.5F), rat1.getAverage().floatValue());
 
 		rat1 = dao.findVotesByDocId(2);
 		Assert.assertNotNull(rat1);
 		Assert.assertEquals(1, rat1.getCount().intValue());
-		Assert.assertEquals(new Float(3.0), rat1.getAverage().floatValue());
+		Assert.assertEquals(Float.valueOf(3.0F), rat1.getAverage().floatValue());
 
 		// Try with unexisting rating vote
 		rat1 = dao.findVotesByDocId(99);
@@ -76,17 +74,17 @@ public class HibernateRatingDAOTest extends AbstractCoreTestCase {
 	}
 
 	@Test
-	public void testFindByDocId() {
+	public void testFindByDocId() throws PersistenceException {
 		List<Rating> ratings = dao.findByDocId(1L);
 		Assert.assertEquals(2, ratings.size());
-		
+
 		// Try with unexisting rating vote
 		ratings = dao.findByDocId(99L);
 		Assert.assertTrue(ratings.isEmpty());
 	}
 
 	@Test
-	public void testFindByDocIdAndUserId() {
+	public void testFindByDocIdAndUserId() throws PersistenceException {
 		Assert.assertNotNull(dao.findByDocIdAndUserId(1, 1));
 		Assert.assertNull(dao.findByDocIdAndUserId(2, 2));
 	}
